<resources>
    <string name="app_name" translatable="false">Fennec</string>
    <string name="login_by_number">Login from phone</string>
    <string name="login_by">Login with</string>
    <string name="sms_will_be_sent_to_this_phone">A confirmation code will be sent to this phone</string>
    <string name="login">Login</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="successful_operation">Successful operation</string>
    <string name="info">Information</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unexpected_response_from_the_server">Unexpected response from the server</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="phone_confirmed">Phone confirmed</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="company_name">Company name</string>
    <string name="fop_matvienko">FOP Matvienko</string>
    <string name="save">Save</string>
    <string name="profile_updated">Profile updated</string>
    <string name="personal">Personal</string>
    <string name="public1">Public</string>
    <string name="menu">Menu</string>
    <string name="products">Products</string>
    <string name="product_groups">Product groups</string>
    <string name="staff">Staff</string>
    <string name="statistics">Statistics</string>
    <string name="sales_history">Sales history</string>
    <string name="trading_networks">Trading networks</string>
    <string name="expenses">Expenses</string>
    <string name="shops">Shops</string>
    <string name="panel">Panel</string>
    <string name="logout">Logout</string>
    <string name="show_30_more_products">show 30 more products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>